v0.1.10 (2018-03-14)
- implement: select stream quality #17
- implement: Add support for specifying transcode type in URL #29
- fix preferred quality matching for transcoding
- add debug mode
v0.1.9 (2018-03-13)
- STRM cleanup
- fix for ensuring default host is used in STRM creation
- add scheduler log and server console logging options; redirect output to logging routine
- fix for enroll bug when accounts >= 10
- get rid of DBM for scheduler
- add STRM logging method (optional)
- add context items to team drive entries (treat them like folders)
- STRM building - add force parameter (to force overwrite)
- STRM building - add 'resolution' parameter to append resolution to STRM filename
- make correction for checking if STRM file exists already
- workaround issue - buildstrm folders not working #40
v0.1.8 (2018-02-21)
- implement: Support to SSL certificates (HTTPS) #39
- add saltpassword instead of using username
- combine buildstrm and buildstrm2 into one method
- fix for when user removes username/password
- setting interface password fix
- fix for blanking out setting parameters
- add slideshow to + options
- fix passthrough, force never_stream = true
- add passthrough to settings pane
- if passthrough = true, set never_stream = false
v0.1.7 (2017-12-28)
- fix reload to reload user settings
- fix port issue in listing
- add session persistence via cookies (for /list and /settings , implementing #28)
- cleanup slideshow interface
- add crypto slideshow support
v0.1.6 (2017-12-17)
- fix accessing settings when no user defined
- fix default username and password (None -> '')
v0.1.5 (2017-12-17)
- added support for crypto photos
- fix for enroll account (recent break)
- fix for starting with no dbm file (recent break)
v0.1.4 (2017-12-16)
- implement: support for photos playback #10
- secure settings pane
- fix for TV/Movies STRM generation
- implemented search function
- redirect dialogs to screen
- fixup settings pane "autocomplete"ing the fields